--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">{{ site.jason }}</a>
+          <a class="navbar-brand" href="/">{{ page.jason }}</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
